--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
         <!-- ===== BOX ICONS ===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-        <title>Portfolio responsive complete</title>
+        <title>Sajith Hewagama</title>
     </head>
     <body>
         <!--===== HEADER =====-->
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">Jhon Doe</a>
+                    <a href="#" class="nav__logo">Sajith Hewagama</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -56,18 +56,16 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="assets/img/perfil.png" alt="">
+                        <img src="img/bitmoji.png" alt="profile.picture">
                     </div>
 
                     <div>
-                        <h2 class="about__subtitle">I'am Jhon Doe</h2>
-                        <span class="about__profession">Web designer</span>
-                        <p class="about__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci consectetur, architecto quas fugiat, iste inventore facere repellendus delectus id, vitae blanditiis.</p>
-
+                        <h2 class="about__subtitle">I'am Sajith Hewagama</h2>
+                        <span class="about__profession">Web Developer</span>
+                        <p class="about__text"> I am a recent graduate from Coder Academy where I completed a 6 month fast track bootcamp in Web Development. I have gained knowledge and experience in both Front and Backend Development. During my course I became passionate about Front End based projects as it allowed me to get creative and bring my imagination to life simply through code. I like the idea of how it’s constantly evolving and changing allowing you to interact with new tools and learn new skills, in turn keeping you engaged in your career. I am looking to learn and gain industry experience within Front End Development or UI/UX based work.</p>
                         <div class="about__social">
                             <a href="#" class="about__social-icon"><i class='bx bxl-linkedin' ></i></a>
                             <a href="#" class="about__social-icon"><i class='bx bxl-github' ></i></a>
-                            <a href="#" class="about__social-icon"><i class='bx bxl-dribbble' ></i></a>
                         </div>
                     </div>
                 </div>
@@ -80,17 +78,17 @@
                 <div class="skills__container bd-grid">
                     <div class="skills__box">
                         <h3 class="skills__subtitle">Development</h3>
-                        <span class="skills__name">Html</span>
-                        <span class="skills__name">Css</span>
+                        <span class="skills__name">HTML</span>
+                        <span class="skills__name">CSS</span>
                         <span class="skills__name">Javascript</span>
-                        <span class="skills__name">Scss</span>
-                        <span class="skills__name">React</span>
-                        <span class="skills__name">Vue</span>
+                        <span class="skills__name">SCSS</span>
+                        <span class="skills__name">Ruby on Rails</span>
                         
-                        <h3 class="skills__subtitle">Design</h3>
-                        <span class="skills__name">Figma</span>
-                        <span class="skills__name">Adobe XD</span>
-                        <span class="skills__name">Photoshop</span>
+                        <h3 class="skills__subtitle">Tools</h3>
+                        <span class="skills__name">VS Code</span>
+                        <span class="skills__name">Github</span>
+                        <span class="skills__name">Netlify</span>
+                        <span class="skills__name">Trello</span>
                     </div>
 
                     <div class="skills__img">
@@ -173,7 +171,7 @@
 
                         <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
 
-                        <input type="submit" value="Enviar" class="contact__button">
+                        <input type="submit" value="Submit" class="contact__button">
                     </form>
                 </div>
             </section>
@@ -183,8 +181,8 @@
         <footer class="footer section">
             <div class="footer__container bd-grid">
                 <div class="footer__data">
-                    <h2 class="footer__title">JHON DOE</h2>
-                    <p class="footer__text">I'm Jhon Doe and this is my personal website</p>
+                    <h2 class="footer__title">SAJITH HEWAGAMA</h2>
+                    <p class="footer__text">I'm Sajith Hewagama and this is my personal website</p>
                 </div>
 
                 <div class="footer__data">
