--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                         <span class="about__profession">Web Developer</span>
                         <p class="about__text"> I am a recent graduate from Coder Academy where I completed a 6 month fast track bootcamp in Web Development. I have gained knowledge and experience in both Front and Backend Development. During my course I became passionate about Front End based projects as it allowed me to get creative and bring my imagination to life simply through code. I like the idea of how it’s constantly evolving and changing allowing you to interact with new tools and learn new skills, in turn keeping you engaged in your career. I am looking to learn and gain industry experience within Front End Development or UI/UX based work.</p>
                         <div class="about__social">
-                            <a href="#" class="about__social-icon"><i class='bx bxl-linkedin' ></i></a>
-                            <a href="#" class="about__social-icon"><i class='bx bxl-github' ></i></a>
+                            <a href="https://www.linkedin.com/in/sajith-hewagama-8b1509110/" class="about__social-icon" target="_blank"><i class='bx bxl-linkedin' ></i></a>
+                            <a href="https://github.com/Sajith14" class="about__social-icon" target="_blank"><i class='bx bxl-github' ></i></a>
                         </div>
                     </div>
                 </div>
@@ -103,47 +103,24 @@
 
                 <div class="portfolio__container bd-grid">
                     <div class="portfolio__img">
-                        <img src="assets/img/work1.jpg" alt="">
+                        <img src="img/white.jpeg" alt="white-label">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">View details</a>
+                            <a href="https://github.com/Sajith14/White-Label" target="blank" class="portfolio__link-name">White Label</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="assets/img/work2.jpg" alt="">
+                        <img src="img/mask.jpeg" alt="Mask">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">View details</a>
+                            <a href="https://github.com/Sajith14/covid_survival_kit" target="_blank" class="portfolio__link-name">Covid-19 Survival Kit</a>
                         </div>
-                    </div>
                     <div class="portfolio__img">
-                        <img src="assets/img/work3.jpg" alt="">
+                        <img src="img/work3.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">View details</a>
+                            <a href="#" class="portfolio__link-name"></a>
                         </div>
-                    </div>
-                    <div class="portfolio__img">
-                        <img src="assets/img/work4.jpg" alt="">
-
-                        <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">View details</a>
-                        </div>
-                    </div>
-                    <div class="portfolio__img">
-                        <img src="assets/img/work5.jpg" alt="">
-
-                        <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">View details</a>
-                        </div>
-                    </div>
-                    <div class="portfolio__img">
-                        <img src="assets/img/work6.jpg" alt="">
-
-                        <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">View details</a>
-                        </div>
-                    </div>
                 </div>
             </section>
 
@@ -152,26 +129,11 @@
                 <h2 class="section-title">Contact</h2>
 
                 <div class="contact__container bd-grid">
-                    <div class="contact__info">
-                        <h3 class="contact__subtitle">EMAIL</h3>
-                        <span class="contact__text">info.mail.com</span>
-
-                        <h3 class="contact__subtitle">PHONE</h3>
-                        <span class="contact__text">+20 999-999</span>
-
-                        <h3 class="contact__subtitle">ADRESS</h3>
-                        <span class="contact__text">My contry</span>
-                    </div>
-
                     <form action="" class="contact__form">
-                        <div class="contact__inputs">
-                            <input type="text" placeholder="Name" class="contact__input">
-                            <input type="mail" placeholder="Email" class="contact__input">
-                        </div>
-
+                        <input type="text" placeholder="Name" class="contact__input">
+                        <input type="mail" placeholder="Email" class="contact__input">
                         <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
-
-                        <input type="submit" value="Submit" class="contact__button">
+                        <input type="button" value="Submit" class="contact__button button">
                     </form>
                 </div>
             </section>
@@ -197,10 +159,10 @@
                 </div>
                 
                 <div class="footer__data">
-                    <h2 class="footer__title">FOLLOW</h2>
-                    <a href="#" class="footer__social"><i class='bx bxl-facebook' ></i></a>
-                    <a href="#" class="footer__social"><i class='bx bxl-instagram' ></i></a>
-                    <a href="#" class="footer__social"><i class='bx bxl-twitter' ></i></a>
+                    <h2 class="footer__title">CONNECT</h2>
+                    <a href="https://www.linkedin.com/in/sajith-hewagama-8b1509110/" class="footer__social" target="_blank"><i class='bx bxl-linkedin' ></i></a>
+                    <a href="https://github.com/Sajith14" class="footer__social" target="_blank"><i class='bx bxl-github' ></i></a>
+                    <a href="https://twitter.com/Sajithhewagama" class="footer__social" target="_blank"><i class='bx bxl-twitter' ></i></a>
                 </div>
 
 
