final changes done

--- a/index.html
+++ b/index.html
@@ -60,12 +60,13 @@
                     </div>
 
                     <div>
-                        <h2 class="about__subtitle">I'am Sajith Hewagama</h2>
+                        <h2 class="about__subtitle">I am Sajith Hewagama</h2>
                         <span class="about__profession">Web Developer</span>
-                        <p class="about__text"> I am a recent graduate from Coder Academy where I completed a 6 month fast track bootcamp in Web Development. I have gained knowledge and experience in both Front and Backend Development. During my course I became passionate about Front End based projects as it allowed me to get creative and bring my imagination to life simply through code. I like the idea of how it’s constantly evolving and changing allowing you to interact with new tools and learn new skills, in turn keeping you engaged in your career. I am looking to learn and gain industry experience within Front End Development or UI/UX based work.</p>
+                        <p class="about__text"> I am a recent graduate from Coder Academy where I completed a 6 month fast track bootcamp in Web Development. I have gained knowledge and experience in both Front and Backend Development. During my course I became passionate about Front End based projects as it allowed me to get creative and bring my imagination to life simply through code. I enjoy how this field is constantly evolving allowing me to interact with new tools and learn new skills. I am seeking to learn and gain industry experience within Front End Development or UI/UX based work.</p>
                         <div class="about__social">
                             <a href="https://www.linkedin.com/in/sajith-hewagama-8b1509110/" class="about__social-icon" target="_blank"><i class='bx bxl-linkedin' ></i></a>
-                            <a href="https://github.com/Sajith14" class="about__social-icon" target="_blank"><i class='bx bxl-github' ></i></a>
+                            <a href="https://github.com/Sajith14" class="about__social-icon" target="_blank"><i class='bx bxl-github' ></i></a><br>
+                            <a class="button" href="https://pdfhost.io/v/ZAHQJkMej_Microsoft_Word_Sajith_Hewagama_Resume_2019docx.pdf" target="_blank">Resume</a>
                         </div>
                     </div>
                 </div>
@@ -103,24 +104,47 @@
 
                 <div class="portfolio__container bd-grid">
                     <div class="portfolio__img">
-                        <img src="img/white.jpeg" alt="white-label">
+                        <img src="img/label.jpeg" alt="White-Label">
 
                         <div class="portfolio__link">
-                            <a href="https://github.com/Sajith14/White-Label" target="blank" class="portfolio__link-name">White Label</a>
+                            <a href="https://github.com/Sajith14/White-Label" class="portfolio__link-name" target="_blank">White Label</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="img/mask.jpeg" alt="Mask">
+                        <img src="img/mask.jpeg" alt="Covid-19 Survival Kit">
 
                         <div class="portfolio__link">
-                            <a href="https://github.com/Sajith14/covid_survival_kit" target="_blank" class="portfolio__link-name">Covid-19 Survival Kit</a>
+                            <a href="https://github.com/Sajith14/covid_survival_kit" class="portfolio__link-name" target="_blank">Covid-19 Survival Kit</a>
                         </div>
+                    </div>
                     <div class="portfolio__img">
-                        <img src="img/work3.jpg" alt="">
+                        <img src="img/tb1.jpg" alt="boxing">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name"></a>
+                            <a href="#" class="portfolio__link-name" target="_blank">Coming Soon</a>
                         </div>
+                    </div>
+                    <div class="portfolio__img">
+                        <img src="img/closed.jpeg" alt="">
+
+                        <div class="portfolio__link">
+                            <a href="#" class="portfolio__link-name" target="_blank">Coming Soon</a>
+                        </div>
+                    </div>
+                    <div class="portfolio__img">
+                        <img src="img/closed.jpeg" alt="">
+
+                        <div class="portfolio__link">
+                            <a href="#" class="portfolio__link-name" target="_blank">Coming Soon</a>
+                        </div>
+                    </div>
+                    <div class="portfolio__img">
+                        <img src="img/closed.jpeg" alt="">
+
+                        <div class="portfolio__link">
+                            <a href="#" class="portfolio__link-name" target="_blank">Coming Soon</a>
+                        </div>
+                    </div>
                 </div>
             </section>
 
@@ -129,11 +153,11 @@
                 <h2 class="section-title">Contact</h2>
 
                 <div class="contact__container bd-grid">
-                    <form action="" class="contact__form">
-                        <input type="text" placeholder="Name" class="contact__input">
-                        <input type="mail" placeholder="Email" class="contact__input">
-                        <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
-                        <input type="button" value="Submit" class="contact__button button">
+                    <form action="https://formsubmit.co/sajith.hewagama@gmail.com" method="POST" class="contact__form">
+                        <input type="text" placeholder="Name" class="contact__input" required>
+                        <input type="mail" placeholder="Email" class="contact__input" required>
+                        <textarea name="" placeholder="Your Message" id="" cols="0" rows="10" class="contact__input" required></textarea>
+                        <input type="submit" value="Submit" class="contact__button button">
                     </form>
                 </div>
             </section>
