--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                     <div>
                         <h2 class="about__subtitle">I am Sajith Hewagama</h2>
                         <span class="about__profession">Web Developer</span>
-                        <p class="about__text"> I am a recent graduate from Coder Academy where I completed a 6 month fast track bootcamp in Web Development. I have gained knowledge and experience in both Front and Backend Development. During my course I became passionate about Front End based projects as it allowed me to get creative and bring my imagination to life simply through code. I enjoy how this field is constantly evolving allowing me to interact with new tools and learn new skills. I am seeking to learn and gain industry experience within Front End Development or UI/UX based work.</p>
+                        <p class="about__text"> I am a recent graduate from Coder Academy where I completed a 6 month fast track bootcamp in Web Development. I have gained knowledge and experience in both Front and Back-end Development. During my course I became passionate about Front End based projects as it allowed me to get creative and bring my imagination to life simply through code. I enjoy how this field is constantly evolving allowing me to interact with new tools and learn new skills. I am seeking to learn and gain industry experience within Front End Development or UI/UX based work.</p>
                         <div class="about__social">
                             <a href="https://www.linkedin.com/in/sajith-hewagama-8b1509110/" class="about__social-icon" target="_blank"><i class='bx bxl-linkedin' ></i></a>
                             <a href="https://github.com/Sajith14" class="about__social-icon" target="_blank"><i class='bx bxl-github' ></i></a><br>
-                            <a class="button" href="https://pdfhost.io/v/ZAHQJkMej_Microsoft_Word_Sajith_Hewagama_Resume_2019docx.pdf" target="_blank">Resume</a>
+                            <a class="button" href="https://pdfhost.io/v/7MWfpjULG_Sajith_Hewagama_Resume_1docx.pdf" target="_blank">Resume</a>
                         </div>
                     </div>
                 </div>
